First HTML Commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content=""width=device-width, initial-scale="1.0">
+        <link rel="stylesheet" type="text/css" href="./Assets/style.css">
+        <title>Sam's 1st Webpage</title>
+    </head>
+<body>
+    <header>
+        <nav class="text-right">
+            <ul>
+                <li>
+                    <a href="https://github.com/">Github</a>
+                </li>
+                <li>
+                    <a href="#">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1 class="text-center">MY FIRST WEBPAGE</h1>
+        
+    </main>
+</body>
+</html>
