--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content=""width=device-width, initial-scale="1.0">
-        <link rel="stylesheet" type="text/css" href="./Assets/style.css">
+        <link rel="stylesheet" type="text/css" href="./Assets/CSS/style.css">
         <title>Sam's 1st Webpage</title>
     </head>
 <body>
@@ -24,7 +24,7 @@
     </header>
     <main>
         <h1 class="text-center">MY FIRST WEBPAGE</h1>
-        
+
     </main>
 </body>
 </html>
