--- a/index.html
+++ b/index.html
@@ -24,7 +24,25 @@
     </header>
     <main>
         <h1 class="text-center">MY FIRST WEBPAGE</h1>
-
+        <figure>
+            <img src="./Assets/images/ringed-octopus.jpeg" alt="Ringed Octopus">
+            <figcaption class="text-center">The Ringed Octopus is one of the deadliest animals on the planet</figcaption>
+        </figure>
+        <section id="contact">
+            <h2 class="text-center">Contact Me</h2>
+            <form>
+                <ul>
+                    <li>
+                        <label class="text-right" for="name">Name:</label>
+                        <input type="text" id="name" name="user-name">
+                    </li>
+                    <li>
+                        <label class="text-right" for="email">Email:</label>
+                        <input type="text" id="email" name="user-name">
+                    </li>
+                </ul>
+            </form>
+        </section>
     </main>
 </body>
 </html>
