added some CSS stylings

--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
                         <input type="text" id="email" name="user-name">
                     </li>
                 </ul>
+                <div class="text-center">
+                    <button type="submit">SEND</button>
+                </div>
             </form>
         </section>
     </main>
+    <footer class="text-center"> MY FIRST WEBPAGE</footer>
 </body>
 </html>
